@@ -2,6 +2,8 @@ ChangeLog
 ---------
 
 Version 2022.01.00-a5 - ??-???-2022:
+  - Changed MMBasic prompt so that you can access the history with the up
+    and down cursors even after you start typing a command.
   - Changed RUN file$ so that it is not necessary for file$ to have a ".bas"
     extension.
         - if file$ does not exist then will try appending the extensions
